# FVFEFVSC

./: README.md  meson.build  xyz.schaetzle.fvfefvsc.json
data/: meson.build  xyz.schaetzle.fvfefvsc.appdata.xml.in  xyz.schaetzle.fvfefvsc.desktop.in  xyz.schaetzle.fvfefvsc.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: fvfefvsc-actions.c  fvfefvsc-application.c  fvfefvsc-application.h  fvfefvsc-buffer.c  fvfefvsc-buffer.h  fvfefvsc-page.c  fvfefvsc-page.h  fvfefvsc-page.ui  fvfefvsc-window-dnd.c  fvfefvsc-window.c  fvfefvsc-window.h  fvfefvsc-window.ui  fvfefvsc.gresource.xml  main.c  meson.build
